--- a/ui/workspace_view.ui
+++ b/ui/workspace_view.ui
@@ -55,7 +55,7 @@
          <item>
           <widget class="QPushButton" name="new_pushButton">
            <property name="text">
-            <string>new</string>
+            <string>创建</string>
            </property>
           </widget>
          </item>
