--- a/resources/base.qss
+++ b/resources/base.qss
@@ -13,14 +13,15 @@ QListWidget{
 
 QPushButton {
     color: #242424;
-    background-color: #40f34e;
+    background-color: #7d9cf5;
     border-radius: 5px;
     padding: 5px 15px 5px 15px;
 }
 
 QPushButton:hover{
-    background-color: #3ee232;
+    background-color: #3281e2;
 }
+
 QMenu{
     color: black;
 }
@@ -50,4 +51,112 @@ QListWidget::item:selected {
 QStackedWidget{
     /*border-left: 1px solid #ded6d6;*/
     border: 1px solid #ded6d6;
+}
+
+QTabWidget::pane {
+    border: 1px solid black;
+    background: white;
+}
+
+QTabWidget::tab-bar:top {
+    top: 1px;
+}
+
+QTabWidget::tab-bar:bottom {
+    bottom: 1px;
+}
+
+QTabWidget::tab-bar:left {
+    right: 1px;
+}
+
+QTabWidget::tab-bar:right {
+    left: 1px;
+}
+
+QTabBar::tab {
+    border: 1px solid black;
+}
+
+QTabBar::tab:selected {
+    background: white;
+}
+
+QTabBar::tab:!selected {
+    background: silver;
+}
+
+QTabBar::tab:!selected:hover {
+    background: #e2e2e2;
+}
+
+QTabBar::tab:top:!selected {
+    margin-top: 3px;
+}
+
+QTabBar::tab:bottom:!selected {
+    margin-bottom: 3px;
+}
+
+QTabBar::tab:top, QTabBar::tab:bottom {
+    min-width: 8ex;
+    margin-right: -1px;
+    padding: 5px 10px 5px 10px;
+}
+
+QTabBar::tab:top:selected {
+    border-bottom-color: none;
+}
+
+QTabBar::tab:bottom:selected {
+    border-top-color: none;
+}
+
+QTabBar::tab:top:last, QTabBar::tab:bottom:last,
+QTabBar::tab:top:only-one, QTabBar::tab:bottom:only-one {
+    margin-right: 0;
+}
+
+QTabBar::tab:left:!selected {
+    margin-right: 3px;
+}
+
+QTabBar::tab:right:!selected {
+    margin-left: 3px;
+}
+
+QTabBar::tab:left, QTabBar::tab:right {
+    min-height: 8ex;
+    margin-bottom: -1px;
+    padding: 10px 5px 10px 5px;
+}
+
+QTabBar::tab:left:selected {
+    border-left-color: none;
+}
+
+QTabBar::tab:right:selected {
+    border-right-color: none;
+}
+
+QTabBar::tab:left:last,
+QTabBar::tab:right:last,
+QTabBar::tab:left:only-one,
+QTabBar::tab:right:only-one {
+    margin-bottom: 0;
+}
+
+QPushButton[class="MediumGray"] {
+    background-color: transparent;
+    border-radius: 0;
+}
+
+QPushButton:hover[class="MediumGray"] {
+    background-color: #ccd1d9;
+}
+
+QPushButton[class="ButtonSelected"]{
+    background-color: transparent;
+    border-radius: 0;
+    border-bottom: 2px solid #78c6ee;
 }
