--- a/ui/workspace_view.ui
+++ b/ui/workspace_view.ui
@@ -54,6 +54,9 @@
          </item>
          <item>
           <widget class="QPushButton" name="new_pushButton">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>创建</string>
            </property>
@@ -78,6 +81,9 @@
          </property>
          <item>
           <widget class="QListWidget" name="workspace_listWidget">
+           <property name="cursor" stdset="0">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <item>
             <property name="text">
              <string>集合</string>
@@ -109,6 +115,9 @@
      </item>
      <item>
       <widget class="QTabWidget" name="tabWidget">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
          <string>Tab 1</string>
