--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -73,7 +73,24 @@
     <addaction name="action_4"/>
     <addaction name="action_5"/>
    </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>窗口</string>
+    </property>
+    <widget class="QMenu" name="menu_4">
+     <property name="title">
+      <string>主题</string>
+     </property>
+     <addaction name="actionL"/>
+     <addaction name="actionDark"/>
+     <addaction name="actionVS_Dark"/>
+     <addaction name="actionMaterial_Dark"/>
+    </widget>
+    <addaction name="action_7"/>
+    <addaction name="menu_4"/>
+   </widget>
    <addaction name="menu"/>
+   <addaction name="menu_3"/>
    <addaction name="menu_2"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -110,6 +127,31 @@
   <action name="action_request">
    <property name="text">
     <string>新的Request</string>
+   </property>
+  </action>
+  <action name="action_7">
+   <property name="text">
+    <string>首选项</string>
+   </property>
+  </action>
+  <action name="actionL">
+   <property name="text">
+    <string>Light</string>
+   </property>
+  </action>
+  <action name="actionDark">
+   <property name="text">
+    <string>Dark</string>
+   </property>
+  </action>
+  <action name="actionVS_Dark">
+   <property name="text">
+    <string>VS-Dark</string>
+   </property>
+  </action>
+  <action name="actionMaterial_Dark">
+   <property name="text">
+    <string>Material-Dark</string>
    </property>
   </action>
  </widget>
