--- a/resources/vss-dark.qss
+++ b/resources/vss-dark.qss
@@ -1,91 +1,139 @@
-/*
-* QSS Qt Stylesheets Collection.
-* Created in 2013 by Khromathyon Software.
-* QSS Theme: Visual Studio(R) 2012 Dark Theme.
-* License: WTFPL
-*/
+QMenuBar {
+    background-color: #232629;
+    color: #ffffff;
+}
+
+QMenuBar::item {
+    height: 30px;
+    padding: 8px;
+    background-color: transparent;
+    color: #ffffff;
+}
+
+QMenuBar::item:selected,
+QMenuBar::item:pressed {
+    color: #ffffff;
+    background-color: #100f0f;
+}
+
 QTabBar::tab {
-  color: #ffffff;
-  border: 0px;
+    color: #ffffff;
+    border: 0px;
 }
 
-QTabBar::close-button{
-  image:url('../resources/images/close-default.png');
-  /*image:url('../resources/images/tab_close.svg');*/
+QTabBar::close-button {
+    image: url('../resources/images/close-default.png');
+    /*image:url('../resources/images/tab_close.svg');*/
 }
 
-QTabBar::close-button:hover{
-  image:url('../resources/images/close-line.svg');
+QTabBar::close-button:hover {
+    image: url('../resources/images/close-line.svg');
+}
+
+QMenu::item {
+    background-color: transparent;
+    padding: 8px 32px;
+    margin-top: 3px;
+}
+
+QMenu::item:selected {
+    background-color: #1a1414;
 }
 
 /*  ------------------------------------------------------------------------  */
 /*  QHeaderView  */
 
 QHeaderView::section {
-  color: rgba(255, 255, 255, 0.7);
-  text-transform: uppercase;
-  background-color: #232629;
-  padding: 0 20px;
-  height: 35px;
-  border-radius: 0px;
+    color: rgba(255, 255, 255, 0.7);
+    text-transform: uppercase;
+    background-color: #232629;
+    padding: 0 20px;
+    height: 35px;
+    border-radius: 0px;
 
-  border-right: 1px solid;
-  border-bottom: 1px solid;
-  border-color: #31363b;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+    border-color: #31363b;
+}
+
+QTableWidget::item:focus{
+  background-color: #383838;
 }
 
 QHeaderView {
-  border: none;
+    border: none;
+}
+
+QMenu[class="main-menu"] {
+    background-color: #2d2d30;
+    border: 1px solid #4f5b62;
+    border-radius: 2px;
+    margin-top: 3px;
+}
+
+QMenu[class='sub-menu'] {
+    background-color: #2f2f2f;
+    border-radius: 2px;
+    margin-top: 3px;
+}
+
+QMenu[class='sub-menu']::item {
+    background-color: transparent;
+    padding: 8px;
+    margin: 3px;
+}
+
+QMenu[class='sub-menu']::item:selected {
+    background-color: #4f5b62;
 }
 
 /*  ------------------------------------------------------------------------  */
 /*  QScrollBar  */
 
 QScrollBar:horizontal {
-  border: 0;
-  background: #232629;
-  height: 8px;
+    border: 0;
+    background: #232629;
+    height: 8px;
 }
 
 QScrollBar:vertical {
-  border: 0;
-  background: #232629;
-  width: 8px;
+    border: 0;
+    background: #232629;
+    width: 8px;
 }
 
 QScrollBar::handle:horizontal {
-  background: #4f5b62;
-  min-width: 20px;
+    background: #4f5b62;
+    min-width: 20px;
 }
 
 QScrollBar::handle:vertical {
-  background: #4f5b62;
-  min-height: 20px;
+    background: #4f5b62;
+    min-height: 20px;
 }
 
 QScrollBar::handle:vertical:hover,
 QScrollBar::handle:horizontal:hover {
-  background: #1de9b6;
+    background: #1de9b6;
 }
 
 QScrollBar::add-line:vertical,
 QScrollBar::sub-line:vertical,
 QScrollBar::add-line:horizontal,
 QScrollBar::sub-line:horizontal {
-  border: 0;
-  background: transparent;
-  width: 0px;
-  height: 0px;
+    border: 0;
+    background: transparent;
+    width: 0px;
+    height: 0px;
 }
 
 QListView {
-  background-color:#252526;
-  border-style:none;
-
+    background-color: #252526;
+    border-style: none;
 }
 
-QListWidget{
-  min-width: 100px;
+QListWidget {
+    min-width: 100px;
     outline: none;
     border: transparent;
 }
@@ -106,209 +154,176 @@ QListWidget::item:selected {
     background-color: #2D2D30;
 }
 
-QStackedWidget{
+QStackedWidget {
     /*border-left: 1px solid #ded6d6;*/
     border: 1px solid #2a2a2a;
 }
 
 QMainWindow {
-  background-color:#2d2d30;
-  color:#f1f1f1;
-}
-
-
-QMenuBar {
-
-  background-color:#2d2d30;
-  text-transform: uppercase;
-  color:#f1f1f1;
-}
-
-QMenuBar::item:selected{
-  background-color:#3e3e40;
-}
-
-QMenu {
-  border:0.5px solid #333337;
-  color:#f1f1f1;
-}
-QMenu::item:selected {
-  background-color:#2d2d30;
-  border-color:#333337;
-
-}
-
-QMenu::item {
-  background-color:#1b1b1c;
-  border-color:#333337;
-       padding: 2px 25px 2px 20px;
-
-}
-
-QMenu::separator{
-  background-color:#333337;
-  spacing:2px;
+    background-color: #2d2d30;
+    color: #f1f1f1;
 }
 
 QTabBar::tab {
-  background-color: #454545;
-  border: 1px solid transparent;
-  color:#f1f1f1;
-  padding:5px;
+    background-color: #454545;
+    border: 1px solid transparent;
+    color: #f1f1f1;
+    padding: 5px;
 
 }
 
-QTabBar::tab:hover{
-  background-color:#1c97ea;
+QTabBar::tab:hover {
+    background-color: #1c97ea;
 
 }
 
-QTabBar::tab:selected{
-  background-color:#007acc;
+QTabBar::tab:selected {
+    background-color: #007acc;
 }
 
 QTabWidget::pane {
-  /*border-top: 2px solid #007acc;*/
-  background-color:#2d2d30;
+    /*border-top: 2px solid #007acc;*/
+    background-color: #2d2d30;
 }
 
 QDockWidget {
     background: #2d2d30;
-    color:#f1f1f1;
+    color: #f1f1f1;
 }
 
 QDockWidget::active {
-  border: 1px solid #007acc;
+    border: 1px solid #007acc;
 }
 
 QDockWidget::title {
-  color:#f1f1f1;
-  background:#007acc;
+    color: #f1f1f1;
+    background: #007acc;
 }
 
 QComboBox {
-  border-style:none;
-  background-color:#333337;
-  color:#b2b2b2;
-  min-width: 75px;
-  height: 35px;
+    border-style: none;
+    background-color: #333337;
+    color: #b2b2b2;
+    min-width: 75px;
+    height: 35px;
 }
 
 QComboBox:on {
-  background-color:#3f3f46;
+    background-color: #3f3f46;
 }
 
 QComboBox:down-arrow {
-  border-style:none;
-  border-left: 1px solid #007acc;
+    border-style: none;
+    border-left: 1px solid #007acc;
 }
 
 QComboBox:drop-down {
-  border-style:none;
+    border-style: none;
 }
 
 /*Needs fix*/
-QScrollBar{
-  background:#3e3e42;
-  border-style:none;
+QScrollBar {
+    background: #3e3e42;
+    border-style: none;
 }
 
-QScrollbar::horizontal{
-     height: 15px;
-     margin: 0px 20px 0 20px;
+QScrollbar::horizontal {
+    height: 15px;
+    margin: 0px 20px 0 20px;
 }
 
 QScrollBar:handle {
-  border-style:none;
-  background:#9d9d9d;
-  margin: inherited;
+    border-style: none;
+    background: #9d9d9d;
+    margin: inherited;
 
 }
+
 QPushButton {
-  border-style:none;
-  border-bottom:1px solid #007acc;
-  color:#f1f1f1;
-  background:#3e3e42;
-  padding:5px;
-  height: 28px;
+    border-style: none;
+    border-bottom: 1px solid #007acc;
+    color: #f1f1f1;
+    background: #3e3e42;
+    padding: 5px;
+    height: 28px;
 }
 
 QPushButton::pressed {
-  border: 1px solid #007acc;
-  background:#3e3e42;
+    border: 1px solid #007acc;
+    background: #3e3e42;
 
 }
 
 QToolButton {
-  border-style:none;
-  background:#2d2d30;
-  color:#f1f1f1;
+    border-style: none;
+    background: #2d2d30;
+    color: #f1f1f1;
 }
 
 QToolButton:pressed {
-  border: 1px solid #007acc;
-  background:#3e3e42;
+    border: 1px solid #007acc;
+    background: #3e3e42;
 }
 
 QLabel {
-  color:#f1f1f1;
+    color: #f1f1f1;
 }
 
 QLineEdit {
-  border: 1px solid #3e3e42;
-  background-color:#3f3f46;
-  color:#b2b2b2;
-  selection-background-color:#1c97ea;
-  height: 35px;
+    border: 1px solid #3e3e42;
+    background-color: #3f3f46;
+    color: #b2b2b2;
+    selection-background-color: #1c97ea;
+    height: 35px;
 
 }
+
 QLineEdit:selected {
-  border-color:#007acc;
+    border-color: #007acc;
 }
 
 
 QToolBar {
-  background:#2d2d30;
-  border-style:none;
+    background: #2d2d30;
+    border-style: none;
 }
 
-QToolBox{
-  background:#2d2d30;
+QToolBox {
+    background: #2d2d30;
 }
 
-QToolBox::tab{
-  background:#2d2d30;
-  color:#f1f1f1;
-  border-style:none;
-  border-bottom-style: solid;
-  border-bottom: 2px solid #007acc;
+QToolBox::tab {
+    background: #2d2d30;
+    color: #f1f1f1;
+    border-style: none;
+    border-bottom-style: solid;
+    border-bottom: 2px solid #007acc;
 }
 
 QToolBox::tab:selected {
-  border:1px solid #007acc;
+    border: 1px solid #007acc;
 }
 
-QWidget{
-  background:#2d2d30;
-  color:#f1f1f1;
+QWidget {
+    background: #2d2d30;
+    color: #f1f1f1;
 }
 
 QTreeView {
-  background-color:#2d2d30;
-  border-style:none;
-}
-
-QTreeView::item:selected
-{
-  background:#007acc;
-}
-
-QTreeView::item:selected!active {
-  background: #3f3f46;
+    background-color: #2d2d30;
+    border-style: none;
 }
 
 QTreeView::item:selected {
-  background: #3f3f46;
+    background: #007acc;
+}
+
+QTreeView::item:selected! active {
+    background: #3f3f46;
+}
+
+QTreeView::item:selected {
+    background: #3f3f46;
 }
 
 
