add: 修改ui 增加解析cookies函数

--- a/ui/api_view.ui
+++ b/ui/api_view.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,2,10">
    <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="spacing">
@@ -239,12 +239,22 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="res_save_pushButton">
+           <property name="text">
+            <string>保存</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
      </item>
      <item>
-      <widget class="QTextBrowser" name="textBrowser"/>
+      <widget class="QStackedWidget" name="res_stackedWidget">
+       <widget class="QWidget" name="page_3"/>
+       <widget class="QWidget" name="page_4"/>
+      </widget>
      </item>
     </layout>
    </item>
