--- a/ui/component/query_params_view.ui
+++ b/ui/component/query_params_view.ui
@@ -50,7 +50,7 @@
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
-          <string>显示描述</string>
+          <string>Description</string>
          </property>
          <property name="checked">
           <bool>true</bool>
