--- a/ui/api_view.ui
+++ b/ui/api_view.ui
@@ -21,11 +21,6 @@
      </property>
      <item>
       <widget class="QComboBox" name="comboBox">
-       <property name="font">
-        <font>
-         <family>Consolas</family>
-        </font>
-       </property>
        <property name="cursor">
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
@@ -53,11 +48,6 @@
      </item>
      <item>
       <widget class="QLineEdit" name="api_url_lineEdit">
-       <property name="font">
-        <font>
-         <family>Consolas</family>
-        </font>
-       </property>
        <property name="placeholderText">
         <string>请输入API地址</string>
        </property>
@@ -65,11 +55,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="send_pushButton">
-       <property name="font">
-        <font>
-         <family>Consolas</family>
-        </font>
-       </property>
        <property name="cursor">
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
@@ -89,11 +74,6 @@
        </property>
        <item>
         <widget class="QPushButton" name="params_pushButton">
-         <property name="font">
-          <font>
-           <family>Consolas</family>
-          </font>
-         </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
@@ -104,11 +84,6 @@
        </item>
        <item>
         <widget class="QPushButton" name="headers_pushButton">
-         <property name="font">
-          <font>
-           <family>Consolas</family>
-          </font>
-         </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
@@ -119,11 +94,6 @@
        </item>
        <item>
         <widget class="QPushButton" name="body_pushButton">
-         <property name="font">
-          <font>
-           <family>Consolas</family>
-          </font>
-         </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
@@ -134,16 +104,18 @@
        </item>
        <item>
         <widget class="QPushButton" name="cookies_pushButton">
-         <property name="font">
-          <font>
-           <family>Consolas</family>
-          </font>
-         </property>
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
           <string>Cookies</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="setting_pushButton">
+         <property name="text">
+          <string>Setting</string>
          </property>
         </widget>
        </item>
@@ -187,11 +159,6 @@
          </property>
          <item>
           <widget class="QPushButton" name="res_body_pushButton">
-           <property name="font">
-            <font>
-             <family>Consolas</family>
-            </font>
-           </property>
            <property name="cursor">
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
@@ -202,11 +169,6 @@
          </item>
          <item>
           <widget class="QPushButton" name="res_cookies_pushButton">
-           <property name="font">
-            <font>
-             <family>Consolas</family>
-            </font>
-           </property>
            <property name="cursor">
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
@@ -217,11 +179,6 @@
          </item>
          <item>
           <widget class="QPushButton" name="res_headers_pushButton">
-           <property name="font">
-            <font>
-             <family>Consolas</family>
-            </font>
-           </property>
            <property name="cursor">
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
@@ -291,13 +248,8 @@
          </item>
          <item>
           <widget class="QPushButton" name="res_save_pushButton">
-           <property name="font">
-            <font>
-             <family>Microsoft YaHei</family>
-            </font>
-           </property>
            <property name="text">
-            <string>保存</string>
+            <string>Save</string>
            </property>
           </widget>
          </item>
