--- a/ui/workspace_view.ui
+++ b/ui/workspace_view.ui
@@ -35,7 +35,7 @@
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>我的工作空间</string>
+            <string>Workspace</string>
            </property>
           </widget>
          </item>
@@ -58,7 +58,7 @@
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <property name="text">
-            <string>创建</string>
+            <string>New</string>
            </property>
           </widget>
          </item>
@@ -72,7 +72,7 @@
         </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,3">
+        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="2,3">
          <property name="spacing">
           <number>0</number>
          </property>
@@ -81,17 +81,23 @@
          </property>
          <item>
           <widget class="QListWidget" name="workspace_listWidget">
+           <property name="minimumSize">
+            <size>
+             <width>90</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="cursor" stdset="0">
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <item>
             <property name="text">
-             <string>集合</string>
+             <string>Collections</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>历史</string>
+             <string>Histroy</string>
             </property>
            </item>
           </widget>
