--- a/resources/vss-dark.qss
+++ b/resources/vss-dark.qss
@@ -204,7 +204,7 @@ QListWidget::item:selected {
 
 QStackedWidget {
     /*border-left: 1px solid #ded6d6;*/
-    border: 1px solid #2a2a2a;
+    border: 1px solid #313030;
 }
 
 QMainWindow {
