--- a/resources/vss-dark.qss
+++ b/resources/vss-dark.qss
@@ -367,11 +367,7 @@ QTreeView::item{
     height: 35px;
 }
 
-QTreeView::item:selected {
-    background: #007acc;
-}
-
-QTreeView::item:selected! active {
+QTreeView::item:selected!active {
     background: #3f3f46;
 }
 
@@ -379,4 +375,6 @@ QTreeView::item:selected {
     background: #3f3f46;
 }
 
-
+QTreeView::indicator, QTreeView::item:indicator{
+    background: none;
+}
