--- a/src/ui/component/request_body_view.ui
+++ b/src/ui/component/request_body_view.ui
@@ -18,6 +18,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QRadioButton" name="none_radioButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>36</height>
+        </size>
+       </property>
        <property name="text">
         <string>none</string>
        </property>
@@ -25,6 +31,12 @@
      </item>
      <item>
       <widget class="QRadioButton" name="form_radioButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>36</height>
+        </size>
+       </property>
        <property name="text">
         <string>form-data</string>
        </property>
@@ -32,6 +44,12 @@
      </item>
      <item>
       <widget class="QRadioButton" name="raw_radioButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>36</height>
+        </size>
+       </property>
        <property name="text">
         <string>raw</string>
        </property>
@@ -39,9 +57,44 @@
      </item>
      <item>
       <widget class="QRadioButton" name="binary_radioButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>36</height>
+        </size>
+       </property>
        <property name="text">
         <string>binary</string>
        </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="raw_cate_comboBox">
+       <item>
+        <property name="text">
+         <string>Text</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>JavaScirpt</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>JSON</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>HTML</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>XML</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
