fix: 图片路径由于代码结构变更错误问题

--- a/src/resources/vss-dark.qss
+++ b/src/resources/vss-dark.qss
@@ -7,25 +7,25 @@ QMenu {
 }
 
 QCheckBox::indicator:checked {
-    image: url("e-on.png");
+    image: url("../resources/images/toggle-on.png");
     width: 25%;
     height: 25%;
 }
 
 QCheckBox::indicator:unchecked {
-    image: url("e-off.png");
+    image: url("../resources/images/toggle-off.png");
     height: 25%;
     width: 25%;
 }
 
 QCheckBox[class='set-check']::indicator:checked {
-    image: url("e-on.png");
+    image: url("../resources/images/toggle-on.png");
     width: 35%;
     height: 35%;
 }
 
 QCheckBox[class='set-check']::indicator:unchecked {
-    image: url("e-off.png");
+    image: url("../resources/images/toggle-off.png");
     height: 35%;
     width: 35%;
 }
