modify: 实验性美化treewidget

--- a/src/resources/vss-dark.qss
+++ b/src/resources/vss-dark.qss
@@ -409,24 +409,69 @@ QWidget {
 }
 
 QTreeView {
-    background-color: #2d2d30;
-    border-style: none;
-
+    padding-left: 15px;
+    border-radius: 0px;
+    background-color: #282828;
+    border-width: 0 0 2px 0;
+    border-radius: 0px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+QTreeView{
+  border-radius: 4px;
+  padding: 5px;
+  margin: 0px;
 }
 
-QTreeView::item {
-    height: 35px;
-}
-
-QTreeView::item:selected! active {
-    background: #3f3f46;
+QTreeView::item{
+  padding: 5px;
+  min-height: 25px;
+  color: #ffffff;
+  selection-color: #ffffff; /* For Windows */
 }
 
 QTreeView::item:selected {
-    background: #3f3f46;
+  background-color: rgba(2, 2, 2, 0.2);
+  selection-background-color: rgba(2, 2, 2, 0.2);
+  color: #ffffff;
+  selection-color: #ffffff; /* For Windows */
 }
 
-QTreeView::indicator, QTreeView::item:indicator {
-    background: none;
+QTreeView::item:selected:focus{
+  background-color: #111111;
+  selection-background-color: #111111;
+  color: #ffffff;
+  selection-color: #ffffff; /* For Windows */
+}
+
+QTreeView::branch{
+  background-color: #282828;
+}
+
+QTreeView::branch:closed:has-children:has-siblings,
+QTreeView::branch:closed:has-children:!has-siblings {
+  image: url(../resources/images/branch-closed.svg);
+}
+
+QTreeView::branch:open:has-children:!has-siblings,
+QTreeView::branch:open:has-children:has-siblings {
+  image: url(../resources/images/branch-open.svg);
+}
+
+QTreeView::branch:has-siblings:!adjoins-item {
+  border-image: url(../resources/images/vline.svg) 0;
+}
+
+QTreeView::branch:has-siblings:adjoins-item {
+    border-image: url(../resources/images/branch-more.svg) 0;
+}
+
+QTreeView::branch:!has-children:!has-siblings:adjoins-item,
+QTreeView::branch:has-children:!has-siblings:adjoins-item {
+    border-image: url(../resources/images/branch-end.svg) 0;
+}
+
+QTreeView QHeaderView::section {
+  border: none;
 }
 
